--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,6 +1,6 @@
 <section class="page-header">
   <h1 class="project-name">
-  <img src=".{{ site.baseurl }}/images/heejung.png"/> {{ site.title }}
+  <img src="{{ site.baseurl }}/images/heejung.png" style="width: 40px"/> {{ site.title }}
   </h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
   <!--<a href="#" class="btn">View on GitHub</a>-->
