--- a/_includes/page-footer.html
+++ b/_includes/page-footer.html
@@ -1,3 +1,3 @@
 <footer class="site-footer">
-  <span class="site-footer-owner">maintained by <a href="https://github.com/heejunghwang/">{{ site.author.name }}</a>.</span>
+  <span class="site-footer-owner">- Writer : <a href="https://github.com/heejunghwang/">{{ site.author.name }}</a>.</span>
 </footer>
